--- a/css/styles.css
+++ b/css/styles.css
@@ -292,30 +292,36 @@ padding: 60px 0;
     color: var(--primary-color);
 }
 /*Адрес в футере*/
-.contact-information {
+.contact-address {
+    font-style: normal;
     margin-top: 20px;
 }
-.contact-detail {
-    display: block;
-}
-.contact-address a{
+.footer-contact-link {
+    font-weight: 500;
     font-size: 14px;
-    line-height: 1.7;
+    line-height: 1.33;
+    color: var(--footer-contact-color);
+    text-decoration: none;
+}
+
+.footer-contact-link:hover,
+.footer-contact-link:focus {
+    color: var(--accent-color);
+}
+
+.map-link {
+    font-size: 14px;
+    line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--primary-color);
     text-decoration: none;
-    font-style: normal;
 }
-/*Ссыдки в футере*/
-.contact-link a{
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-    color: var(--footer-contact-color);
-    text-decoration: none;
-    font-style: normal;
+
+.map-link:hover,
+.map-link:focus {
+    color: var(--accent-color);
 }
-.contact-link + .contact.link {
+.footer-contact-item +.footer-contact-item {
     margin-top: 9px;
 }
 /*Страница портфолио*/
