--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,9 @@ align-items: center;
     font-size: 26px;
     line-height: 1.2;
     letter-spacing: 0.03em;
-    text-decoration: none; 
+    text-decoration: none;
+    display: block;
+    padding: 32px 0;
 }
 .logo-web {
 color: var(--accent-color);
@@ -111,6 +113,8 @@ color: var(--accent-color);
     line-height: 1.14;
     color: var(--contacts-list-color);
     text-decoration: none;
+    display: block;
+    padding: 32px 0;
 }
 /*Настройка hover и focus*/
 .navigation-list a:hover,
@@ -186,7 +190,6 @@ color: var(--accent-color);
     display: flex;
 }
 .testionials.item {
-        width: 270px;
         font-weight: normal;
         font-size: 14px;
         line-height: 1.71;
@@ -213,6 +216,7 @@ color: var(--accent-color);
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--contacts-list-color);
+    width: 270px;
 }
 /*Коробочка "Чем мы занимаемся"*/
 .about-projects {
@@ -287,7 +291,6 @@ padding: 60px 0;
 .footer-web {
     color: var(--accent-color);
 }
-
 .footer-studio {
     color: var(--primary-color);
 }
@@ -303,12 +306,10 @@ padding: 60px 0;
     color: var(--footer-contact-color);
     text-decoration: none;
 }
-
 .footer-contact-link:hover,
 .footer-contact-link:focus {
     color: var(--accent-color);
 }
-
 .map-link {
     font-size: 14px;
     line-height: 1.71;
@@ -316,7 +317,6 @@ padding: 60px 0;
     color: var(--primary-color);
     text-decoration: none;
 }
-
 .map-link:hover,
 .map-link:focus {
     color: var(--accent-color);
@@ -329,7 +329,7 @@ padding: 60px 0;
 .filters-list {
     display: flex;
     justify-content: center;
-    margin-bottom: 34px;
+    margin-bottom: 50px;
 }
 /*Кнопки фильтра*/
 .filters-btn {
@@ -357,7 +357,6 @@ padding: 60px 0;
 /*Коробочка для проектов*/
 .project-list {
     background: var(--primary-color);
-    box-sizing: border-box;
 }
 .project-list:not(:nth-child(3n)) {
     margin-right: 30px;
